[project]
name = "mazegen"
version = "1.0.0"
authors = [
	{name = "efiorent"},
	{name = "aginiaux"},
]
description = """Maze generation package."""
requires-python = ">=3.11"

[build-system]
requires = ["uv_build >= 0.11.6, <0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
